Still running RF

--- a/time_series_modeling.ipynb
+++ b/time_series_modeling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "a451b8e4",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "ff8c7164",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "92f7307f",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "52184  95318.0  37.66618 -119.80640  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "ffd38fa0",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "980   95648.0  38.92643 -121.31101  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "305d23e4",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "9fd8d70d",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "72bce697",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "8af466f1",
    "metadata": {},
    "outputs": [],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "f33f4ad7",
    "metadata": {},
    "outputs": [],
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "8b0eb503",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "37ff41b6",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 10 folds for each of 648 candidates, totalling 6480 fits\n"
+      "Fitting 10 folds for each of 8 candidates, totalling 80 fits\n"
      ]
     },
     {
@@ -603,7 +603,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 11\u001b[0m\n\u001b[0;32m      2\u001b[0m random_forest \u001b[38;5;241m=\u001b[39m RandomForestClassifier()\n\u001b[0;32m      3\u001b[0m param_grid_rf \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mn_estimators\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m200\u001b[39m, \u001b[38;5;241m500\u001b[39m],        \u001b[38;5;66;03m# Number of trees in the forest\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax_depth\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m20\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m],        \u001b[38;5;66;03m# Maximum depth of each tree\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbootstrap\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28;01mFalse\u001b[39;00m]             \u001b[38;5;66;03m# Whether to bootstrap samples\u001b[39;00m\n\u001b[0;32m     10\u001b[0m }\n\u001b[1;32m---> 11\u001b[0m best_model, metrics_row \u001b[38;5;241m=\u001b[39m modeling(random_forest, all_data, param_grid_rf, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRandom Forest\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     13\u001b[0m plot_best_model(best_model, X_test, y_test)\n",
+      "Cell \u001b[1;32mIn[13], line 9\u001b[0m\n\u001b[0;32m      2\u001b[0m random_forest \u001b[38;5;241m=\u001b[39m RandomForestClassifier()\n\u001b[0;32m      3\u001b[0m param_grid_rf \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax_depth\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m20\u001b[39m],        \u001b[38;5;66;03m# Maximum depth of each tree\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmin_samples_split\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m10\u001b[39m],       \u001b[38;5;66;03m# Minimum samples to split an internal node\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;66;03m#'max_features': ['sqrt', 'log2', 0.8], # Number of features to consider when splitting\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbootstrap\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28;01mFalse\u001b[39;00m]             \u001b[38;5;66;03m# Whether to bootstrap samples\u001b[39;00m\n\u001b[0;32m      8\u001b[0m }\n\u001b[1;32m----> 9\u001b[0m best_model, metrics_row \u001b[38;5;241m=\u001b[39m modeling(random_forest, all_data, param_grid_rf, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRandom Forest\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     11\u001b[0m plot_best_model(best_model, X_test, y_test)\n",
       "Cell \u001b[1;32mIn[10], line 94\u001b[0m, in \u001b[0;36mmodeling\u001b[1;34m(model, dataset, param_grid, fold, model_name, cat_col)\u001b[0m\n\u001b[0;32m     90\u001b[0m         dataset[col] \u001b[38;5;241m=\u001b[39m dataset[col]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategory\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     92\u001b[0m X_train, y_train, X_test, y_test \u001b[38;5;241m=\u001b[39m dataset\n\u001b[1;32m---> 94\u001b[0m best_model, metrics_row \u001b[38;5;241m=\u001b[39m train_and_cv(model, param_grid, X_train, y_train, fold, model_name)\n\u001b[0;32m     95\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCross-Validation RMSE: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmetrics_row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrmse_cv_mean\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ± \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmetrics_row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrmse_cv_std\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCross-Validation MAE: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmetrics_row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmae_cv_mean\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ± \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmetrics_row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmae_cv_std\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
       "Cell \u001b[1;32mIn[10], line 32\u001b[0m, in \u001b[0;36mtrain_and_cv\u001b[1;34m(model, param_grid, X_train, y_train, fold, model_name)\u001b[0m\n\u001b[0;32m     18\u001b[0m scoring \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrmse\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mneg_root_mean_squared_error\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmae\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mneg_mean_absolute_error\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     22\u001b[0m }\n\u001b[0;32m     23\u001b[0m grid_search \u001b[38;5;241m=\u001b[39m GridSearchCV(\n\u001b[0;32m     24\u001b[0m     model,\n\u001b[0;32m     25\u001b[0m     param_grid,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     30\u001b[0m     verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     31\u001b[0m )\n\u001b[1;32m---> 32\u001b[0m grid_search\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m     34\u001b[0m best_model \u001b[38;5;241m=\u001b[39m grid_search\u001b[38;5;241m.\u001b[39mbest_estimator_\n\u001b[0;32m     35\u001b[0m best_idx \u001b[38;5;241m=\u001b[39m grid_search\u001b[38;5;241m.\u001b[39mbest_index_\n",
       "File \u001b[1;32mc:\\Users\\Lydia\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:1473\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[1;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1466\u001b[0m     estimator\u001b[38;5;241m.\u001b[39m_validate_params()\n\u001b[0;32m   1468\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[0;32m   1469\u001b[0m     skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[0;32m   1470\u001b[0m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[0;32m   1471\u001b[0m     )\n\u001b[0;32m   1472\u001b[0m ):\n\u001b[1;32m-> 1473\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fit_method(estimator, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
@@ -622,11 +622,9 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "random_forest = RandomForestClassifier()\n",
     "param_grid_rf = {\n",
-    "    'n_estimators': [100, 200, 500],        # Number of trees in the forest\n",
-    "    'max_depth': [5, 10, 20, None],        # Maximum depth of each tree\n",
-    "    'min_samples_split': [2, 5, 10],       # Minimum samples to split an internal node\n",
-    "    'min_samples_leaf': [1, 2, 4],        # Minimum samples at a leaf node\n",
-    "    'max_features': ['sqrt', 'log2', 0.8], # Number of features to consider when splitting\n",
+    "    'max_depth': [10, 20],        # Maximum depth of each tree\n",
+    "    'min_samples_split': [5, 10],       # Minimum samples to split an internal node\n",
+    "    #'max_features': ['sqrt', 'log2', 0.8], # Number of features to consider when splitting\n",
     "    'bootstrap': [True, False]             # Whether to bootstrap samples\n",
     "}\n",
     "best_model, metrics_row = modeling(random_forest, all_data, param_grid_rf, 10, 'Random Forest')\n",
